--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@coreui/coreui": "^4.2.6",
+    "@coreui/vue": "^4.8.1",
+    "@coreui/vue-pro": "^4.10.1",
+    "@vue-leaflet/vue-leaflet": "^0.9.0",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "leaflet": "^1.9.4",
+    "openai": "^3.2.1",
     "vue": "^3.2.13",
-    "vue-class-component": "^8.0.0-0"
+    "vue-class-component": "^8.0.0-0",
+    "vue-router": "4",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
